// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> input should render input 1`] = `
<div>
  <div
    class="mfui-text-field mfui-text-field_theme_default"
  >
    <div
      class="mfui-text-field__field-wrapper"
    >
      <input
        class="mfui-text-field__field"
        placeholder="Текст"
        type="text"
        value=""
      />
      <label
        class="mfui-text-field__label"
      >
        Текст
      </label>
    </div>
    <div
      class="mfui-text-field__field-bottom-wrapper"
    >
      <div
        class="mfui-text-field__notice-text"
      />
    </div>
  </div>
</div>
`;

exports[`<TextField /> input should render with customIcon 1`] = `
<div
  class="mfui-text-field__icon-box"
  data-testid="iconBox"
>
  <div
    class="icon"
  />
</div>
`;

exports[`<TextField /> input should render with mask 1`] = `
<input
  class="mfui-text-field__field inputClass"
  data-testid="input"
  id="id"
  name="name"
  placeholder="placeholder"
  type="text"
  value="+7 (___) ___-__-__"
/>
`;

exports[`<TextField /> input should render with maskChar 1`] = `
<input
  class="mfui-text-field__field inputClass"
  data-testid="input"
  id="id"
  name="name"
  placeholder="placeholder"
  type="text"
  value="+7 (---) ---------"
/>
`;

exports[`<TextField /> props that are not related to the display of fields and work the same regardless of field mode: label should render label of required field 1`] = `
<label
  class="mfui-text-field__label labelClass"
  data-testid="label"
  for="id"
>
  label
  <span
    class="mfui-text-field__require-mark"
  >
    *
  </span>
</label>
`;

exports[`<TextField /> props that are not related to the display of fields and work the same regardless of field mode: label should render with label 1`] = `
<label
  class="mfui-text-field__label labelClass"
  data-testid="label"
  for="id"
>
  label
</label>
`;

exports[`<TextField /> props that are not related to the display of fields and work the same regardless of field mode: noticeText should render with noticeText 1`] = `
<div
  class="mfui-text-field__notice-text mfui-text-field__notice-text_active"
  data-testid="notice"
>
  noticeText
</div>
`;

exports[`<TextField /> textarea hideResizeButton should render with resize button 1`] = `
<div
  class="mfui-text-field__resizer"
  data-testid="resizer"
>
  <test-file-stub />
</div>
`;

exports[`<TextField /> textarea hideResizeButton should render without resize button 1`] = `
<label
  class="mfui-text-field__label labelClass"
  data-testid="label"
  for="id"
>
  placeholder
</label>
`;

exports[`<TextField /> textarea should render default textarea 1`] = `
<textarea
  class="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea inputClass"
  data-testid="input"
  id="id"
  maxlength="5"
  name="name"
  placeholder="placeholder"
  style="height: -4px;"
>
  value
</textarea>
`;

exports[`<TextField /> textarea symbolCounter should render with symbolCounter and graphemesCounter max limit and disallow input symbols 1`] = `
<div
  class="mfui-text-field mfui-text-field_theme_default test-class"
  data-testid="root"
>
  <div
    class="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
  >
    <textarea
      class="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea inputClass"
      data-testid="input"
      id="id"
      maxlength="10"
      name="name"
      placeholder="placeholder"
      style="height: -4px;"
    >
      👩‍💻😀👩‍💻😀👩‍💻👩‍💻😀👩‍💻😀👩‍💻
    </textarea>
    <label
      class="mfui-text-field__label labelClass"
      data-testid="label"
      for="id"
    >
      placeholder
    </label>
  </div>
  <div
    class="mfui-text-field__field-bottom-wrapper mfui-text-field__field-bottom-wrapper_filled"
  >
    <div
      class="mfui-text-field__notice-text"
      data-testid="notice"
    />
    <span
      class="mfui-text-field__counter"
    >
      10/10
    </span>
  </div>
</div>
`;

exports[`<TextField /> textarea symbolCounter should render with symbolCounter and graphemesCounter no over limit and allow input symbols 1`] = `
<div
  class="mfui-text-field mfui-text-field_theme_default test-class"
  data-testid="root"
>
  <div
    class="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_textarea_fixed"
  >
    <textarea
      class="mfui-text-field__field mfui-text-field__field_type_fixed mfui-text-field__field_textarea inputClass"
      data-testid="input"
      id="id"
      maxlength="-1"
      name="name"
      placeholder="placeholder"
      style="height: -4px;"
    >
      👩‍💻😀👩‍💻😀👩‍💻
    </textarea>
    <label
      class="mfui-text-field__label labelClass"
      data-testid="label"
      for="id"
    >
      placeholder
    </label>
  </div>
  <div
    class="mfui-text-field__field-bottom-wrapper mfui-text-field__field-bottom-wrapper_filled"
  >
    <div
      class="mfui-text-field__notice-text"
      data-testid="notice"
    />
    <span
      class="mfui-text-field__counter"
    >
      5/10
    </span>
  </div>
</div>
`;

exports[`<TextField /> textarea symbolCounter should render with symbolCounter and no over limit 1`] = `
<span
  class="mfui-text-field__counter"
>
  5/10
</span>
`;
